// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard Component Rendering states renders correctly in different view modes and states: different-rating 1`] = `
<div>
  <div
    class="sc-Qotzb jXqnwG"
  >
    <div
      class="sc-fYsHOw EOurK"
    >
      <img
        alt="Fresh Apples"
        src="https://example.com/apple.jpg"
        style="object-fit: cover; width: 100%; height: 100%;"
      />
      <div
        class="sc-dKREkF bzyKQR"
      >
        - 
        20
         %
      </div>
    </div>
    <div
      class="sc-fWnslK dJjPPy"
    >
      <div>
        <h3
          class="sc-dIMoHT feIgmq"
        >
          Fresh Apples
        </h3>
        <p
          class="sc-iQQCXo isnkPu"
        >
          Delicious red apples
        </p>
        <div
          class="sc-gDpztx eCqMch"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="none"
            height="16"
            stroke="#d1d5db"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="none"
            height="16"
            stroke="#d1d5db"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="none"
            height="16"
            stroke="#d1d5db"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="sc-kpOvIu Tpaix"
    >
      <div
        class="sc-icnseD bgAJOE"
      >
        <span
          class="sc-jMsorb iBJVKL"
        >
          $
          3.99
        </span>
        <span
          class="sc-cXawGu iohfmJ"
        >
          $
          4.99
        </span>
      </div>
      <div
        class="sc-dcKlJK bBsxaq"
      >
        <button
          class="rt-reset rt-BaseButton rt-r-size-2 rt-variant-solid rt-Button"
          data-accent-color=""
          style="font-size: 15px; font-weight: var(--font-weight-bold); padding: 12px 16px; border-radius: 12px; cursor: pointer; min-height: 36px;"
        >
          Buy now
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductCard Component Rendering states renders correctly in different view modes and states: fewer-details 1`] = `
<div>
  <div
    class="sc-Qotzb etgRoS"
  >
    <div
      class="sc-fYsHOw linPOc"
    >
      <img
        alt="Fresh Apples"
        src="https://example.com/apple.jpg"
        style="object-fit: cover; width: 100%; height: 100%;"
      />
      <div
        class="sc-dKREkF bzyKQR"
      >
        - 
        20
         %
      </div>
    </div>
    <div
      class="sc-fWnslK iXtZvF"
    >
      <div>
        <h3
          class="sc-dIMoHT hnyEkC"
        >
          Fresh Apples
        </h3>
        <p
          class="sc-iQQCXo isnkPu"
        >
          Delicious red apples
        </p>
        <div
          class="sc-gDpztx eCqMch"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="none"
            height="16"
            stroke="#d1d5db"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
        </div>
      </div>
      <div
        class="sc-jJAtPt dFuEVz"
      >
        <span
          class="sc-cUiCeM borvav"
        >
          Stock
        </span>
        <span
          class="sc-jScdur hWnMkg"
        >
          8 pcs
        </span>
      </div>
    </div>
    <div
      class="sc-kpOvIu kDDHGU"
    >
      <div
        class="sc-icnseD gtUVmO"
      >
        <span
          class="sc-jMsorb iBJVKL"
        >
          $
          3.99
        </span>
        <span
          class="sc-cXawGu QfAqy"
        >
          $
          4.99
        </span>
      </div>
      <div
        class="sc-jPkiSJ hCyOhX"
      >
        <span
          class="sc-cZSric gmvOOg"
        >
          Free Shipping
        </span>
      </div>
      <div
        class="sc-dcKlJK dpiFHU"
      >
        <button
          class="rt-reset rt-BaseButton rt-r-size-2 rt-variant-solid rt-Button"
          data-accent-color=""
          style="font-size: 15px; font-weight: var(--font-weight-bold); padding: 12px 16px; border-radius: 12px; cursor: pointer; min-width: 160px; min-height: 47px;"
        >
          <div
            class="rt-Flex rt-r-ai-center"
          >
            Product Detail
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right"
              fill="none"
              height="15"
              stroke="white"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="stroke-width: 5; margin-left: 8px;"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </div>
        </button>
        <button
          class="rt-reset rt-BaseButton rt-r-size-2 rt-variant-outline rt-Button"
          data-accent-color=""
          style="min-width: 160px; font-weight: var(--font-weight-bold); font-size: 15px; padding: 6px 12px; border-radius: 12px;"
        >
          <div
            class="rt-Flex rt-r-ai-center rt-r-gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="stroke-width: 4; margin-right: 8px;"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
              />
            </svg>
            Add to wish list
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductCard Component Rendering states renders correctly in different view modes and states: grid-view 1`] = `
<div>
  <div
    class="sc-Qotzb jXqnwG"
  >
    <div
      class="sc-fYsHOw EOurK"
    >
      <img
        alt="Fresh Apples"
        src="https://example.com/apple.jpg"
        style="object-fit: cover; width: 100%; height: 100%;"
      />
      <div
        class="sc-dKREkF bzyKQR"
      >
        - 
        20
         %
      </div>
    </div>
    <div
      class="sc-fWnslK dJjPPy"
    >
      <div>
        <h3
          class="sc-dIMoHT feIgmq"
        >
          Fresh Apples
        </h3>
        <p
          class="sc-iQQCXo isnkPu"
        >
          Delicious red apples
        </p>
        <div
          class="sc-gDpztx eCqMch"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="none"
            height="16"
            stroke="#d1d5db"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="sc-kpOvIu Tpaix"
    >
      <div
        class="sc-icnseD bgAJOE"
      >
        <span
          class="sc-jMsorb iBJVKL"
        >
          $
          3.99
        </span>
        <span
          class="sc-cXawGu iohfmJ"
        >
          $
          4.99
        </span>
      </div>
      <div
        class="sc-dcKlJK bBsxaq"
      >
        <button
          class="rt-reset rt-BaseButton rt-r-size-2 rt-variant-solid rt-Button"
          data-accent-color=""
          style="font-size: 15px; font-weight: var(--font-weight-bold); padding: 12px 16px; border-radius: 12px; cursor: pointer; min-height: 36px;"
        >
          Buy now
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductCard Component Rendering states renders correctly in different view modes and states: list-view 1`] = `
<div>
  <div
    class="sc-Qotzb etgRoS"
  >
    <div
      class="sc-fYsHOw linPOc"
    >
      <img
        alt="Fresh Apples"
        src="https://example.com/apple.jpg"
        style="object-fit: cover; width: 100%; height: 100%;"
      />
      <div
        class="sc-dKREkF bzyKQR"
      >
        - 
        20
         %
      </div>
    </div>
    <div
      class="sc-fWnslK iXtZvF"
    >
      <div>
        <h3
          class="sc-dIMoHT hnyEkC"
        >
          Fresh Apples
        </h3>
        <p
          class="sc-iQQCXo isnkPu"
        >
          Delicious red apples
        </p>
        <div
          class="sc-gDpztx eCqMch"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="none"
            height="16"
            stroke="#d1d5db"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
        </div>
      </div>
      <div
        class="sc-jJAtPt dFuEVz"
      >
        <span
          class="sc-cUiCeM borvav"
        >
          Delivery in
        </span>
        <span
          class="sc-jScdur hWnMkg"
        >
          2-3 days
        </span>
        <span
          class="sc-cUiCeM borvav"
        >
          Freshness
        </span>
        <span
          class="sc-jScdur clsHto"
        >
          New Harvest
        </span>
        <span
          class="sc-cUiCeM borvav"
        >
          Farm
        </span>
        <span
          class="sc-jScdur hWnMkg"
        >
          Organic Farms
        </span>
        <span
          class="sc-cUiCeM borvav"
        >
          Delivery
        </span>
        <span
          class="sc-jScdur hWnMkg"
        >
          United States
        </span>
        <span
          class="sc-cUiCeM borvav"
        >
          Stock
        </span>
        <span
          class="sc-jScdur hWnMkg"
        >
          8 pcs
        </span>
      </div>
    </div>
    <div
      class="sc-kpOvIu kDDHGU"
    >
      <div
        class="sc-icnseD gtUVmO"
      >
        <span
          class="sc-jMsorb iBJVKL"
        >
          $
          3.99
        </span>
        <span
          class="sc-cXawGu QfAqy"
        >
          $
          4.99
        </span>
      </div>
      <div
        class="sc-jPkiSJ hCyOhX"
      >
        <span
          class="sc-cZSric gmvOOg"
        >
          Free Shipping
        </span>
        <span
          class="sc-lixPIL eyeLAe"
        >
          Delivery in 
          2-3 days
        </span>
      </div>
      <div
        class="sc-dcKlJK dpiFHU"
      >
        <button
          class="rt-reset rt-BaseButton rt-r-size-2 rt-variant-solid rt-Button"
          data-accent-color=""
          style="font-size: 15px; font-weight: var(--font-weight-bold); padding: 12px 16px; border-radius: 12px; cursor: pointer; min-width: 160px; min-height: 47px;"
        >
          <div
            class="rt-Flex rt-r-ai-center"
          >
            Product Detail
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right"
              fill="none"
              height="15"
              stroke="white"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="stroke-width: 5; margin-left: 8px;"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </div>
        </button>
        <button
          class="rt-reset rt-BaseButton rt-r-size-2 rt-variant-outline rt-Button"
          data-accent-color=""
          style="min-width: 160px; font-weight: var(--font-weight-bold); font-size: 15px; padding: 6px 12px; border-radius: 12px;"
        >
          <div
            class="rt-Flex rt-r-ai-center rt-r-gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="stroke-width: 4; margin-right: 8px;"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
              />
            </svg>
            Add to wish list
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductCard Component Rendering states renders correctly in different view modes and states: no-discount 1`] = `
<div>
  <div
    class="sc-Qotzb jXqnwG"
  >
    <div
      class="sc-fYsHOw EOurK"
    >
      <img
        alt="Fresh Apples"
        src="https://example.com/apple.jpg"
        style="object-fit: cover; width: 100%; height: 100%;"
      />
      0
    </div>
    <div
      class="sc-fWnslK dJjPPy"
    >
      <div>
        <h3
          class="sc-dIMoHT feIgmq"
        >
          Fresh Apples
        </h3>
        <p
          class="sc-iQQCXo isnkPu"
        >
          Delicious red apples
        </p>
        <div
          class="sc-gDpztx eCqMch"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="none"
            height="16"
            stroke="#d1d5db"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="sc-kpOvIu Tpaix"
    >
      <div
        class="sc-icnseD bgAJOE"
      >
        <span
          class="sc-jMsorb iBJVKL"
        >
          $
          3.99
        </span>
      </div>
      <div
        class="sc-dcKlJK bBsxaq"
      >
        <button
          class="rt-reset rt-BaseButton rt-r-size-2 rt-variant-solid rt-Button"
          data-accent-color=""
          style="font-size: 15px; font-weight: var(--font-weight-bold); padding: 12px 16px; border-radius: 12px; cursor: pointer; min-height: 36px;"
        >
          Buy now
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductCard Component Rendering states renders correctly in different view modes and states: no-free-shipping 1`] = `
<div>
  <div
    class="sc-Qotzb etgRoS"
  >
    <div
      class="sc-fYsHOw linPOc"
    >
      <img
        alt="Fresh Apples"
        src="https://example.com/apple.jpg"
        style="object-fit: cover; width: 100%; height: 100%;"
      />
      <div
        class="sc-dKREkF bzyKQR"
      >
        - 
        20
         %
      </div>
    </div>
    <div
      class="sc-fWnslK iXtZvF"
    >
      <div>
        <h3
          class="sc-dIMoHT hnyEkC"
        >
          Fresh Apples
        </h3>
        <p
          class="sc-iQQCXo isnkPu"
        >
          Delicious red apples
        </p>
        <div
          class="sc-gDpztx eCqMch"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="none"
            height="16"
            stroke="#d1d5db"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
        </div>
      </div>
      <div
        class="sc-jJAtPt dFuEVz"
      >
        <span
          class="sc-cUiCeM borvav"
        >
          Delivery in
        </span>
        <span
          class="sc-jScdur hWnMkg"
        >
          2-3 days
        </span>
        <span
          class="sc-cUiCeM borvav"
        >
          Freshness
        </span>
        <span
          class="sc-jScdur clsHto"
        >
          New Harvest
        </span>
        <span
          class="sc-cUiCeM borvav"
        >
          Farm
        </span>
        <span
          class="sc-jScdur hWnMkg"
        >
          Organic Farms
        </span>
        <span
          class="sc-cUiCeM borvav"
        >
          Delivery
        </span>
        <span
          class="sc-jScdur hWnMkg"
        >
          United States
        </span>
        <span
          class="sc-cUiCeM borvav"
        >
          Stock
        </span>
        <span
          class="sc-jScdur hWnMkg"
        >
          8 pcs
        </span>
      </div>
    </div>
    <div
      class="sc-kpOvIu kDDHGU"
    >
      <div
        class="sc-icnseD gtUVmO"
      >
        <span
          class="sc-jMsorb iBJVKL"
        >
          $
          3.99
        </span>
        <span
          class="sc-cXawGu QfAqy"
        >
          $
          4.99
        </span>
      </div>
      <div
        class="sc-dcKlJK dpiFHU"
      >
        <button
          class="rt-reset rt-BaseButton rt-r-size-2 rt-variant-solid rt-Button"
          data-accent-color=""
          style="font-size: 15px; font-weight: var(--font-weight-bold); padding: 12px 16px; border-radius: 12px; cursor: pointer; min-width: 160px; min-height: 47px;"
        >
          <div
            class="rt-Flex rt-r-ai-center"
          >
            Product Detail
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right"
              fill="none"
              height="15"
              stroke="white"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="stroke-width: 5; margin-left: 8px;"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </div>
        </button>
        <button
          class="rt-reset rt-BaseButton rt-r-size-2 rt-variant-outline rt-Button"
          data-accent-color=""
          style="min-width: 160px; font-weight: var(--font-weight-bold); font-size: 15px; padding: 6px 12px; border-radius: 12px;"
        >
          <div
            class="rt-Flex rt-r-ai-center rt-r-gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="stroke-width: 4; margin-right: 8px;"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
              />
            </svg>
            Add to wish list
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductCard Component Rendering states renders correctly in different view modes and states: with-wishlist 1`] = `
<div>
  <div
    class="sc-Qotzb etgRoS"
  >
    <div
      class="sc-fYsHOw linPOc"
    >
      <img
        alt="Fresh Apples"
        src="https://example.com/apple.jpg"
        style="object-fit: cover; width: 100%; height: 100%;"
      />
      <div
        class="sc-dKREkF bzyKQR"
      >
        - 
        20
         %
      </div>
    </div>
    <div
      class="sc-fWnslK iXtZvF"
    >
      <div>
        <h3
          class="sc-dIMoHT hnyEkC"
        >
          Fresh Apples
        </h3>
        <p
          class="sc-iQQCXo isnkPu"
        >
          Delicious red apples
        </p>
        <div
          class="sc-gDpztx eCqMch"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="var(--black-color-default)"
            height="16"
            stroke="var(--black-color-default)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="none"
            height="16"
            stroke="#d1d5db"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
        </div>
      </div>
      <div
        class="sc-jJAtPt dFuEVz"
      >
        <span
          class="sc-cUiCeM borvav"
        >
          Delivery in
        </span>
        <span
          class="sc-jScdur hWnMkg"
        >
          2-3 days
        </span>
        <span
          class="sc-cUiCeM borvav"
        >
          Freshness
        </span>
        <span
          class="sc-jScdur clsHto"
        >
          New Harvest
        </span>
        <span
          class="sc-cUiCeM borvav"
        >
          Farm
        </span>
        <span
          class="sc-jScdur hWnMkg"
        >
          Organic Farms
        </span>
        <span
          class="sc-cUiCeM borvav"
        >
          Delivery
        </span>
        <span
          class="sc-jScdur hWnMkg"
        >
          United States
        </span>
        <span
          class="sc-cUiCeM borvav"
        >
          Stock
        </span>
        <span
          class="sc-jScdur hWnMkg"
        >
          8 pcs
        </span>
      </div>
    </div>
    <div
      class="sc-kpOvIu kDDHGU"
    >
      <div
        class="sc-icnseD gtUVmO"
      >
        <span
          class="sc-jMsorb iBJVKL"
        >
          $
          3.99
        </span>
        <span
          class="sc-cXawGu QfAqy"
        >
          $
          4.99
        </span>
      </div>
      <div
        class="sc-jPkiSJ hCyOhX"
      >
        <span
          class="sc-cZSric gmvOOg"
        >
          Free Shipping
        </span>
        <span
          class="sc-lixPIL eyeLAe"
        >
          Delivery in 
          2-3 days
        </span>
      </div>
      <div
        class="sc-dcKlJK dpiFHU"
      >
        <button
          class="rt-reset rt-BaseButton rt-r-size-2 rt-variant-solid rt-Button"
          data-accent-color=""
          style="font-size: 15px; font-weight: var(--font-weight-bold); padding: 12px 16px; border-radius: 12px; cursor: pointer; min-width: 160px; min-height: 47px;"
        >
          <div
            class="rt-Flex rt-r-ai-center"
          >
            Product Detail
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right"
              fill="none"
              height="15"
              stroke="white"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="stroke-width: 5; margin-left: 8px;"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </div>
        </button>
        <button
          class="rt-reset rt-BaseButton rt-r-size-2 rt-variant-outline rt-Button"
          data-accent-color=""
          style="min-width: 160px; font-weight: var(--font-weight-bold); font-size: 15px; padding: 6px 12px; border-radius: 12px;"
        >
          <div
            class="rt-Flex rt-r-ai-center rt-r-gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="stroke-width: 4; margin-right: 8px;"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
              />
            </svg>
            Add to wish list
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
